# angelnet

./: .gitignore  LICENSE  README.md  angel  pyproject.toml  workflow.md
docs/timesheet/: 2026-05-12-angeltime-design.md  2026-05-12-angeltime-plan.md
scripts/: extract_save_reservation.py
src/angeldash/: __init__.py  __main__.py  auth.py  client.py  design_guide1.md  errors.py  models.py  rooms.example.py  rooms.py  server.py
src/angeldash/_common/: __init__.py  http_relogin.py  models.py
src/angeldash/rooms/: __init__.py  client.py  routes.py
src/angeldash/static/: app.js  index.html  logs.html  projects.html  rooms.html  settings.html  style.css  vacation.html  weekly-report.html
src/angeldash/static/css/: main.css
src/angeldash/static/js/: api.js  header.js  icons.js  logs.js  main.js  ongoing_schedule.js  projects.js  resizable_columns.js  settings.js  vacation.js  week_sidebar.js  weekly-report.js
src/angeldash/timesheet/: __init__.py  client.py  db.py  email_smtp.py  formatter.py  misc_auto.py  models.py  notion.py  routes.py  templates.py  upnote.py  weekly_table.py
tests/: conftest.py  test_auth.py  test_client.py  test_errors.py  test_models.py  test_rooms.py  test_server.py
tests/_common/: test_http_relogin.py
tests/timesheet/: conftest.py  test_client.py  test_db.py  test_email.py  test_formatter.py  test_misc_auto.py  test_models.py  test_server.py  test_templates.py  test_upnote.py  test_weekly_table.py
